  * RefindPlus can now detect this and automatically scale UI elements down accordingly
  * Alternatively, users can use the `scale_ui` token to scale UI elements down
  * The threshold below which the display is considered `LoRez` is 1025px
  * Ensures correct icon scales are maintained on `RescanAll` calls


0.13.3.AB (06 Sep 2022):
-----------------------
- Adds `PreferUGA` Feature
  * Sets RefindPlus to always use UGA for its graphics output when available
    - The default is to use GOP and to fall back on UGA when GOP is not available
  * The feature can be enabled using a new `prefer_uga` configuration token
- Adds `FollowSymlinks` Feature
  * Allows following symbolic links to loaders
  * These are otherwise ignored to avoid misc issues but made be useful to run some Linux setups
  * The feature can be enabled using a new `follow_symlinks` configuration token
- Adds `FocusNvramFix` Feature
  * Focuses the `ProtectNVRAM` feature (if set) on explicit UEFI Windows boots
  * The feature can be enabled using a new `focus_nvram_fix` configuration token
    - Replaces the `EnableMacosFilter` feature which has been removed
- Fixes Unwanted APFS Data Volume Entries
  * APFS data volumes could sometimes appear as boot options due to inadequate filtering
- Fixes SubScreen Boots
  * Boots from subscreens, such as after pressing F2, were handled as generic UEFI files
  * This resulted in some processes being skipped or unwanted processes being applied
  * RefindPlus now tries to make such boots specific as follows:
    - `Opencore`, `Clover`, `Linux`, `MacOS`, `Windows` and `Misc Others`
- Fixes Apple Hardware Test Option
  * While Apple stopped providing this feature after June 2013, some users may have restored this
    - Ref: https://github.com/upekkha/AppleHardwareTest
  * In such cases however, RefindPlus did not provide the option on APFS volumes when `SyncAPFS` is active