@@ -113,7 +113,7 @@ REFIT_CONFIG GlobalConfig = {
     /* FocusNvramFix = */ FALSE,
     /* FollowSymlinks = */ FALSE,
     /* PreferUGA = */ FALSE,
-    /* SupplyNVME = */ TRUE,
+    /* SupplyNVME = */ FALSE,
     /* SupplyAPFS = */ TRUE,
     /* SupplyUEFI = */ TRUE,
     /* SilenceAPFS = */ TRUE,
